[package]
name = "add_two_numbers"
version = "0.1.0"
authors = ["Ash Guy <ash@ashguy.com>"]
edition = "2018"
license = "MIT"
description = "Project for walking through differences between Rustlang and JS / TS"
readme = "README.md"
publish = false

[[bin]]
name = "add_two_numbers"
path = "src/main.rs"

[[test]]
name = "tests"

[dependencies]
clap = "3.0.0-beta.2"
