[package]
name = "getting_pointy"
version = "0.1.0"
authors = ["Ash Guy <ash@ashguy.com>"]
edition = "2018"
license = "MIT"
description = "Project for walking through differences between Rustlang and JS / TS"
readme = "README.md"
publish = false

[[bin]]
name = "getting_pointy"
path = "src/main.rs"

[[test]]
name = "tests"
